@@ -1,3 +1,6 @@
+2009-06-04
+	* Add entropy_perc printing the available entropy as percentage
+
 2009-05-31
 	* Fix hostname resolution for mpd_host
 
